# Parallel_Networks

./: README.md
task_1/cmake_version/: CMakeLists.txt  README.md  main.cpp
task_1/makefile_version/: README.md  main.cpp  makefile  sin_sum
